tests/fails/f46.t
require("fail")

terra foo()
  var a,b,c
end
foo()
